k8s/app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: go-blog-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: go-blog
  template:
    metadata:
      labels:
        app: go-blog
    spec:
      containers:
        - name: go-blog-container
          image: go_blog_app:k8s # <-- Тот образ, что мы собрали внутри Minikube
          imagePullPolicy: Never  # <-- ВАЖНО: "Не качай из инета, бери локальный"
          ports:
            - containerPort: 8080
