k8s/consumer.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: go-blog-consumer
spec:
  replicas: 1
  selector:
    matchLabels:
      app: go-blog-consumer
  template:
    metadata:
      labels:
        app: go-blog-consumer
    spec:
      containers:
        - name: consumer
          image: go_blog_app:k8s
          imagePullPolicy: Never
          command: ["consumer"] # <-- Запускаем бинарник consumer
