k8s/publisher.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: go-blog-publisher
spec:
  replicas: 1
  selector:
    matchLabels:
      app: go-blog-publisher
  template:
    metadata:
      labels:
        app: go-blog-publisher
    spec:
      containers:
        - name: publisher
          image: go_blog_app:k8s # Тот же образ!
          imagePullPolicy: Never
          # ВАЖНО: Переопределяем команду
          # В Dockerfile они лежат в /usr/local/bin, который есть в PATH.
          # Поэтому просто пишем имя бинарника:
          command: ["publisher"]
