k8s/kafka.yaml
# 1. HEADLESS SERVICE (Для общения брокеров между собой)
apiVersion: v1
kind: Service
metadata:
  name: kafka-headless
  labels:
    app: kafka
spec:
  ports:
    - port: 9092
      name: plaintext
    - port: 9093
      name: controller
  clusterIP: None
  selector:
    app: kafka
---
# 2. ОБЫЧНЫЙ СЕРВИС (Для доступа приложений)
apiVersion: v1
kind: Service
metadata:
  name: kafka-service
  labels:
    app: kafka
spec:
  ports:
    - port: 9092
      name: plaintext
  selector:
    app: kafka
---
# 3. Statefulset (Сама Кафка на официальном образе)
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: kafka
spec:
  serviceName: kafka-headless
  replicas: 1
  selector:
    matchLabels:
      app: kafka
  template:
    metadata:
      labels:
        app: kafka
    spec:
      containers:
        - name: kafka
          image: apache/kafka:3.7.0 # <-- Официальный образ!
          ports:
            - containerPort: 9092
            - containerPort: 9093
