k8s/redis.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis-service # <- Имя, по которому Go будет искать Redis
spec:
  ports:
    - port: 6379
      targetPort: 6379
  selector:
    app: redis
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis
  template:
    metadata:
      labels:
        app: redis
    spec:
      containers:
        - name: redis
          image: redis:7-alpine # Берем легкий образ
          ports:
            - containerPort: 6379
